Updated docs and README

--- a/docs/demo.ipynb
+++ b/docs/demo.ipynb
@@ -523,27 +523,26 @@
     "\n",
     "| Key | dtype | Description | Use |\n",
     "| --- | --- | --- | --- |\n",
-    "| \n",
-    "ae_lp | `float` | Linear Predictor for model of A&E admissions. | Parameter for models. |\n",
-    "ae_count | `float` | Total number of A&E admissions over the remaining lifetime. | Result. |\n",
-    "ae_counts_by_year | `list` | Number of A&E admissions for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "ae_discounted_by_year | `list` | Cost of A&E admissions for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "ae_discounted_cost | `float` | Total cost of A&E admissions over the remaining lifetime. | Result. |\n",
-    "nel_lp | `float` | Linear Predictor for model of non-elective bed days. | Parameter for models. |\n",
-    "nel_count | `float` | Total number of non-elective bed days over the remaining lifetime. | Result. |\n",
-    "nel_counts_by_year | `list` | Number of non-elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "nel_discounted_by_year | `list` | Cost of non-elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "nel_discounted_cost | `float` | Total cost of non-elective bed days over the remaining lifetime. | Result. |\n",
-    "el_lp | `float` | Linear Predictor for model of elective bed days. | Parameter for models. |\n",
-    "el_count | `float` | Total number of elective bed days over the remaining lifetime. | Result. |\n",
-    "el_counts_by_year | `list` | Number of elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "el_discounted_by_year | `list` | Cost of elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
-    "el_discounted_cost | `float` | Total cost of elective bed days over the remaining lifetime. | Result. |\n",
-    "care_years | `float` | Total average time spent in residential care in years over the remaining lifetime. | Result. |\n",
-    "care_years_by_year | `list` | Average time spent in residential care each year over the remaining lifetime. | Calculation step for models. |\n",
-    "care_years_discounted_by_year | `list` | Cost of average time spent in residential care each year over the remaining lifetime. | Calculation step for models. |\n",
-    "care_years_discounted_cost | `float` | Total cost of time spent in residential care over the remaining lifetime. | Result. |\n",
-    "total_discounted_cost | `float` | Total combined cost of A&E use, NEL days, EL days, and time in residential care, all over the remaining lifetime. | Result. |\n",
+    "| ae_lp | `float` | Linear Predictor for model of A&E admissions. | Parameter for models. |\n",
+    "| ae_count | `float` | Total number of A&E admissions over the remaining lifetime. | Result. |\n",
+    "| ae_counts_by_year | `list` | Number of A&E admissions for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| ae_discounted_by_year | `list` | Cost of A&E admissions for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| ae_discounted_cost | `float` | Total cost of A&E admissions over the remaining lifetime. | Result. |\n",
+    "| nel_lp | `float` | Linear Predictor for model of non-elective bed days. | Parameter for models. |\n",
+    "| nel_count | `float` | Total number of non-elective bed days over the remaining lifetime. | Result. |\n",
+    "| nel_counts_by_year | `list` | Number of non-elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| nel_discounted_by_year | `list` | Cost of non-elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| nel_discounted_cost | `float` | Total cost of non-elective bed days over the remaining lifetime. | Result. |\n",
+    "| el_lp | `float` | Linear Predictor for model of elective bed days. | Parameter for models. |\n",
+    "| el_count | `float` | Total number of elective bed days over the remaining lifetime. | Result. |\n",
+    "| el_counts_by_year | `list` | Number of elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| el_discounted_by_year | `list` | Cost of elective bed days for each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| el_discounted_cost | `float` | Total cost of elective bed days over the remaining lifetime. | Result. |\n",
+    "| care_years | `float` | Total average time spent in residential care in years over the remaining lifetime. | Result. |\n",
+    "| care_years_by_year | `list` | Average time spent in residential care each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| care_years_discounted_by_year | `list` | Cost of average time spent in residential care each year over the remaining lifetime. | Calculation step for models. |\n",
+    "| care_years_discounted_cost | `float` | Total cost of time spent in residential care over the remaining lifetime. | Result. |\n",
+    "| total_discounted_cost | `float` | Total combined cost of A&E use, NEL days, EL days, and time in residential care, all over the remaining lifetime. | Result. |\n",
     "\n",
     "__Cost:__\n",
     "\n",
@@ -1187,7 +1186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
